# machine_learning_2026_spring

./: .gitignore  Project.md  Readme.md  StudentNameList-1.txt  StudentNameList-2.md  StudentNameList-2.txt  StudentNameList-FR.txt
session-0/: lecture-0-notation-for-session-1-to-session-7.md
session-1/: code-my_linear_regression.ipynb  code-my_linear_regression.md  code-my_linear_regression.py  lecture-2-simple-linear-regression-gd.md  lecture-3-multiple-linear-regression.md  lecture-4-polynomial-linear-regression.md  practice-2-git-github-workflow.md
session-2/: lecture-2-logistic-regression-sigmoid-model.md  lecture-3-logistic-regression-decision-boundary.md  lecture-4-logistic-regression-loss-bce-gd.md  practice-2-ci-cd-github-actions-release.md
session-3/: lecture-1-neural-networks-from-logistic-regression-to-nn.md  lecture-2-neural-networks-architecture-and-notation.md  lecture-5-neural-networks-output-layers-and-softmax.md  lecture-6-softmax-deep-dive.md  lecture-7-code-nn-forward-propagation-numpy_matrix_operations.ipynb  lecture-8-neural-networks-pytorch-mnist.ipynb  practice-huggingface-with-github-ci-cd.md  practice-pickling-of-a-model.md
session-6/simple_nn_utseus/: .gitignore  LICENSE  README.md  pyproject.toml
session-6/simple_nn_utseus/simple_nn_utseus/: __init__.py
session-6/simple_nn_utseus/simple_nn_utseus/data/: __init__.py  _preprocessing.py  mnist_loader.py
session-6/simple_nn_utseus/simple_nn_utseus/layers/: __init__.py  _utils.py  activation.py  base.py  dense.py
session-6/simple_nn_utseus/simple_nn_utseus/losses/: __init__.py  crossentropy.py
session-6/simple_nn_utseus/simple_nn_utseus/training/: __init__.py  _metrics.py  trainer.py
session-6/simple_nn_utseus/simple_nn_utseus/utils/: __init__.py  helpers.py
session-6/simple_nn_utseus/tests/: __init__.py  test_data.py  test_layers.py  test_training.py
(+83 files in other folders)
