[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_nn_utseus"
version = "0.1.0"
description = "A simple neural network library for educational purposes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["neural-network", "machine-learning", "education", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/simple_nn_utseus"
Documentation = "https://github.com/yourusername/simple_nn_utseus#readme"
Repository = "https://github.com/yourusername/simple_nn_utseus.git"
"Bug Tracker" = "https://github.com/yourusername/simple_nn_utseus/issues"

[tool.setuptools]
packages = ["simple_nn_utseus", "simple_nn_utseus.data", "simple_nn_utseus.layers", 
            "simple_nn_utseus.losses", "simple_nn_utseus.training", "simple_nn_utseus.utils"]

[tool.setuptools.package-data]
simple_nn_utseus = ["py.typed"]
